# my-game

./: Cargo.toml
assets/maps/: map.tmx
src/: lib.rs
src/plugins/: camera.rs  map.rs  mod.rs  player.rs
